fix: body spacing

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -890,6 +890,12 @@
 }
 
 // Hide Modal scrollbar
+body.modal-open{
+  padding-right: 0px !important;
+}
+#commonModal{
+  padding-right: 0px !important;
+}
 #commonModal::-webkit-scrollbar{
   display: none;
 }
